rust/cuprum-rust/tests/ui/fail/const_availability_export.stderr
error[E0015]: cannot call non-const function `is_available` in constants
  --> tests/ui/fail/const_availability_export.rs:10:30
   |
10 | const RUST_AVAILABLE: bool = is_available();
   |                              ^^^^^^^^^^^^^^
   |
note: function `is_available` is not const
  --> tests/ui/fail/const_availability_export.rs:6:1
   |
 6 | fn is_available() -> bool {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants
